# PardusAgents

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md  simpl_agent.py  simple_agent.py  test_agent.py
pardusagnet/: __init__.py
pardusagnet/agent/: agent.py
pardusagnet/tools/: tools.py
server/: main.py
