[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pardusagnet"
version = "0.1.2"
description = "The simplest agent library you have ever seen"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docstring-parser>=0.17.0",
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pardusagnet"]
